# Shruti

./: .gitignore  README.md  envexample.txt  pyproject.toml  speech_text.py  test.py
JARVIS_FINAL/: app.py
JARVIS_FINAL/core/: stt.py  tts.py  vision.py
JARVIS_FINAL/memory/: graph.py  memory.py  nodes.py  state.py
lib/: agent_core.py  agentstate.py  audio.m4a  interact.py  main.py  prompt.py  speech_text.py  test.ipynb  test.py
lib/auth/: authorise.py
lib/jarvis_ui/.dart_tool/: package_config.json  package_graph.json
lib/jarvis_ui/android/: local.properties
lib/jarvis_ui/android/app/: build.gradle.kts
lib/jarvis_ui/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/jarvis_ui/ios/Flutter/ephemeral/: flutter_native_integration.env
lib/jarvis_ui/lib/: main.dart
lib/jarvis_ui/linux/runner/: my_application.cc
lib/jarvis_ui/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh  flutter_native_integration.env
lib/jarvis_ui/web/: index.html
lib/memory/: recent_submission.json
lib/shruti_backend/: agent_core.py  agentstate.py  interact.py  prompt.py  test.py
lib/shruti_backend/auth/: authorise.py
lib/shruti_backend/tools/: calendar_tool.py  codeforces_tool.py  email_tool.py
lib/shruti_ui/: README.md  pubspec.yaml
lib/shruti_ui/android/app/src/main/kotlin/com/example/jarvis_ui/: MainActivity.kt
lib/shruti_ui/ios/Runner/: Info.plist
lib/shruti_ui/ios/Runner.xcodeproj/: project.pbxproj
lib/shruti_ui/lib/: main.dart
lib/shruti_ui/linux/: CMakeLists.txt
lib/shruti_ui/macos/Runner.xcodeproj/: project.pbxproj
lib/shruti_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lib/shruti_ui/macos/Runner/Configs/: AppInfo.xcconfig
lib/shruti_ui/windows/runner/: Runner.rc
lib/tools/: authorise.py  calendar_tool.py  codeforces.py  codeforces_tool.py  email_tool.py  git.py  recent_submission.json  sample.html  sample.json  specific_question.json  specific_question.txt  web_scraping.py
