[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.70.0",
    "groq>=1.2.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.9",
    "langgraph-cli[inem,inmem]>=0.4.24",
    "load-dotenv>=0.1.0",
    "lxml>=6.1.0",
    "numpy>=2.4.3",
    "openai-whisper>=20250625",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "yfinance>=1.3.0",
]
