[project]
name = "shruti"
version = "0.1.0"
description = "Multimodal, agentic AI system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "fastembed>=0.8.0",
    "faster-whisper>=1.2.1",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.70.0",
    "groq>=0.30.0, <1.0.0",
    "httpx>=0.28.1",
    "keyboard>=0.13.5",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.5",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.9",
    "langgraph-checkpoint>=4.0.3",
    "langgraph-cli[inem,inmem]>=0.4.24",
    "load-dotenv>=0.1.0",
    "lxml>=6.1.0",
    "numpy>=2.4.3",
    "ollama>=0.6.2",
    "openai-whisper>=20250625",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pyinstaller>=6.21.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "qdrant-client>=1.18.0",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "unstructured-inference>=1.6.11",
    "unstructured[all-docs,pdf]>=0.22.18",
    "websockets>=16.0",
    "whisper>=1.1.10",
    "yfinance>=1.3.0",
]
